# mcu_backups

./: .gitignore  README.MD
51_example/: 1302RTC.uvgui.mark  1302RTC.uvopt  1302RTC.uvproj  1302rtc_main.c  24C02_main.c  24C02data.uvgui.mark  24C02data.uvopt  24C02data.uvproj  AD.uvgui.mark  AD.uvopt  AD.uvproj  AD_main.c  AT24C02.c  AT24C02.h  Buzzer.c  Buzzer.h  Buzzer.uvgui.mark  Buzzer.uvopt  Buzzer.uvproj  CMakeLists.txt  DS1302.c  DS1302.h  DS18B20.c  DS18B20.h  DS18B20.uvgui.mark  DS18B20.uvopt  DS18B20.uvproj  DS18B20_main.c  I2C.c  I2C.h  LCD1602.uvgui.mark  LCD1602.uvopt  LCD1602.uvproj  LCD1602_2.c  LCD1602_2.h  MatrixKey.c  MatrixKey.h  MatrixKeyboard.uvgui.mark  MatrixKeyboard.uvopt  MatrixKeyboard.uvproj  (+55 more)
GD32Template/App/: stm32Transplant.h
GD32Template/Hardware/0.96OLED/: OLED.c  OLED.h
GD32Template/Project/GD32E230x/: GD32E230C8T6.uvguix.Ushop  GD32E230C8T6.uvguix.mark  GD32E230C8T6.uvoptx  GD32E230C8T6.uvprojx
GD32Template/Project/GD32E230x/User/: gd32e23x_it.c  gd32e23x_it.h  main.c  main.h  systick.c  systick.h
GD32Template/Project/GD32F470x/: GD32F470.uvguix.mark  GD32F470.uvoptx  GD32F470.uvprojx
GD32Template/Protocol/: serial.c  serial.h
STM32Template/C9Libs/: C9AD.c  C9AD.h  C9DMA.c  C9DMA.h  C9EXTI.c  C9EXTI.h  C9GPIO.c  C9GPIO.h  C9IC.c  C9IC.h  C9PWM.c  C9PWM.h  C9Timer.c  C9Timer.h  C9public.c  C9public.h
STM32Template/Hardware/: OLED.c
STM32Template/Project/STM32F103C8/: STM32F103C8.uvguix.Ushop  STM32F103C8.uvguix.mark  STM32F103C8.uvoptx  STM32F103C8.uvprojx
STM32Template/Protocol/: serial.c  serial.h
(+6 files in other folders)
